[gd_scene load_steps=20 format=2]

[ext_resource path="res://addons/github-integration/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/github-integration/scripts/GitHub.gd" type="Script" id=2]
[ext_resource path="res://addons/github-integration/scripts/sign-in.gd" type="Script" id=3]
[ext_resource path="res://addons/github-integration/resources/GitHub-Mark-64px.png" type="Texture" id=4]
[ext_resource path="res://addons/github-integration/fonts/Roboto-Black.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://addons/github-integration/resources/loading/Loading_indicator_circle.svg.png" type="Texture" id=6]
[ext_resource path="res://addons/github-integration/scripts/UserPanel.gd" type="Script" id=7]
[ext_resource path="res://addons/github-integration/user/avatar.png" type="Texture" id=8]
[ext_resource path="res://addons/github-integration/scripts/Repo.gd" type="Script" id=9]
[ext_resource path="res://addons/github-integration/scripts/WindowDialog.gd" type="Script" id=10]
[ext_resource path="res://addons/github-integration/scripts/Commit.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 20
font_data = ExtResource( 1 )

[node name="GitHub" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="Sign-in" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 17.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sign-in" type="VBoxContainer" parent="Sign-in"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Sign-in/Sign-in"]
margin_right = 960.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="Label2" type="Label" parent="Sign-in/Sign-in"]
margin_top = 64.0
margin_right = 960.0
margin_bottom = 83.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.0901961, 0.0823529, 0.0862745, 1 )
text = "Sign-in to GitHub"
align = 1

[node name="HSeparator5" type="HSeparator" parent="Sign-in/Sign-in"]
margin_top = 87.0
margin_right = 960.0
margin_bottom = 95.0
rect_min_size = Vector2( 0, 8 )
custom_styles/separator = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Sign-in/Sign-in"]
editor/display_folded = true
margin_top = 99.0
margin_right = 960.0
margin_bottom = 128.0
alignment = 1

[node name="Label" type="Label" parent="Sign-in/Sign-in/HBoxContainer"]
margin_top = 5.0
margin_right = 83.0
margin_bottom = 24.0
rect_min_size = Vector2( 83, 0 )
text = "Email:"

[node name="Username" type="LineEdit" parent="Sign-in/Sign-in/HBoxContainer"]
margin_left = 87.0
margin_right = 960.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "n.santilio97@gmail.com"
clear_button_enabled = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Sign-in/Sign-in"]
editor/display_folded = true
margin_top = 132.0
margin_right = 960.0
margin_bottom = 161.0
alignment = 1

[node name="Label2" type="Label" parent="Sign-in/Sign-in/HBoxContainer2"]
margin_top = 5.0
margin_right = 83.0
margin_bottom = 24.0
rect_min_size = Vector2( 83, 0 )
text = "Password:"

[node name="Password" type="LineEdit" parent="Sign-in/Sign-in/HBoxContainer2"]
margin_left = 87.0
margin_right = 960.0
margin_bottom = 29.0
size_flags_horizontal = 3
text = "Tommasof97PolibaGIT*HUB"
secret = true
clear_button_enabled = true

[node name="HSeparator3" type="HSeparator" parent="Sign-in/Sign-in"]
margin_top = 165.0
margin_right = 960.0
margin_bottom = 169.0
rect_min_size = Vector2( 0, 3 )
custom_styles/separator = SubResource( 3 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Sign-in/Sign-in"]
editor/display_folded = true
margin_top = 173.0
margin_right = 960.0
margin_bottom = 198.0
alignment = 1

[node name="create-token" type="Button" parent="Sign-in/Sign-in/HBoxContainer3"]
margin_left = 354.0
margin_right = 482.0
margin_bottom = 25.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 4
text = "Create Token (?)"

[node name="sign-in" type="Button" parent="Sign-in/Sign-in/HBoxContainer3"]
margin_left = 486.0
margin_right = 606.0
margin_bottom = 25.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 4
text = "Sign-in"

[node name="error" type="Label" parent="Sign-in/Sign-in"]
visible = false
margin_top = 190.0
margin_right = 960.0
margin_bottom = 209.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0, 0.235294, 1 )
text = "Error: "
align = 1

[node name="HSeparator4" type="HSeparator" parent="Sign-in/Sign-in"]
margin_top = 202.0
margin_right = 960.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 3 )
custom_styles/separator = SubResource( 3 )

[node name="Loading" type="TextureRect" parent="Sign-in/Sign-in"]
margin_left = 455.0
margin_top = 210.0
margin_right = 505.0
margin_bottom = 260.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="UserPanel" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 9.0
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Panel" type="VBoxContainer" parent="UserPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="UserPanel/Panel"]
editor/display_folded = true
margin_right = 960.0
margin_bottom = 50.0
custom_constants/separation = 0
alignment = 1

[node name="avatar" type="TextureRect" parent="UserPanel/Panel/HBoxContainer"]
margin_left = 450.0
margin_right = 500.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 5
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="UserPanel/Panel/HBoxContainer"]
visible = false
margin_left = 450.0
margin_top = 15.0
margin_right = 550.0
margin_bottom = 34.0
size_flags_horizontal = 5
text = "Connected as:"

[node name="user" type="Label" parent="UserPanel/Panel/HBoxContainer"]
margin_left = 500.0
margin_top = 15.0
margin_right = 509.0
margin_bottom = 34.0
size_flags_horizontal = 5
custom_colors/font_color = Color( 0.133333, 0.356863, 0.94902, 1 )
custom_colors/font_color_shadow = Color( 0.14902, 0.0705882, 0.47451, 1 )
text = "a"
align = 1

[node name="HSeparator5" type="HSeparator" parent="UserPanel/Panel"]
margin_top = 50.0
margin_right = 960.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 15 )
custom_styles/separator = SubResource( 3 )

[node name="List" type="VBoxContainer" parent="UserPanel/Panel"]
margin_top = 65.0
margin_right = 960.0
margin_bottom = 623.0
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="UserPanel/Panel/List"]
margin_right = 960.0
margin_bottom = 19.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="UserPanel/Panel/List/HBoxContainer2"]
margin_right = 92.0
margin_bottom = 19.0
text = "Repositories:"

[node name="repos" type="Label" parent="UserPanel/Panel/List/HBoxContainer2"]
margin_left = 92.0
margin_right = 101.0
margin_bottom = 19.0
size_flags_horizontal = 5
custom_colors/font_color = Color( 0.184314, 0.909804, 0.486275, 1 )
text = "b"
align = 1

[node name="Repos" type="Tree" parent="UserPanel/Panel/List"]
margin_top = 23.0
margin_right = 960.0
margin_bottom = 238.0
size_flags_horizontal = 5
size_flags_vertical = 3
hide_root = true

[node name="repos_buttons" type="HBoxContainer" parent="UserPanel/Panel/List"]
margin_top = 242.0
margin_right = 960.0
margin_bottom = 267.0
grow_vertical = 2
rect_clip_content = true
custom_constants/separation = 10
alignment = 1

[node name="repo" type="Button" parent="UserPanel/Panel/List/repos_buttons"]
margin_left = 438.0
margin_right = 521.0
margin_bottom = 25.0
rect_clip_content = true
text = "New Repository"

[node name="HSeparator6" type="HSeparator" parent="UserPanel/Panel/List"]
margin_top = 271.0
margin_right = 960.0
margin_bottom = 286.0
rect_min_size = Vector2( 0, 15 )
custom_styles/separator = SubResource( 3 )

[node name="HBoxContainer3" type="HBoxContainer" parent="UserPanel/Panel/List"]
editor/display_folded = true
margin_top = 290.0
margin_right = 960.0
margin_bottom = 309.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="UserPanel/Panel/List/HBoxContainer3"]
margin_right = 40.0
margin_bottom = 19.0
text = "Gists:"

[node name="gists" type="Label" parent="UserPanel/Panel/List/HBoxContainer3"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 19.0
size_flags_horizontal = 5
custom_colors/font_color = Color( 0.184314, 0.909804, 0.486275, 1 )
text = "c"
align = 1

[node name="Gist" type="Tree" parent="UserPanel/Panel/List"]
margin_top = 313.0
margin_right = 960.0
margin_bottom = 528.0
size_flags_horizontal = 5
size_flags_vertical = 3
hide_root = true

[node name="gist_buttons" type="HBoxContainer" parent="UserPanel/Panel/List"]
margin_top = 532.0
margin_right = 960.0
margin_bottom = 557.0
custom_constants/separation = 10
alignment = 1

[node name="gist" type="Button" parent="UserPanel/Panel/List/gist_buttons"]
margin_left = 442.0
margin_right = 517.0
margin_bottom = 25.0
text = "New Gist"

[node name="HSeparator7" type="HSeparator" parent="UserPanel/Panel"]
margin_top = 623.0
margin_right = 960.0
margin_bottom = 631.0
rect_min_size = Vector2( 0, 8 )
custom_styles/separator = SubResource( 3 )

[node name="Repo" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 9.0
script = ExtResource( 9 )

[node name="Panel2" type="VBoxContainer" parent="Repo"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="HBoxContainer8" type="HBoxContainer" parent="Repo/Panel2"]
margin_right = 960.0
margin_bottom = 24.0
alignment = 1

[node name="Label" type="Label" parent="Repo/Panel2/HBoxContainer8"]
margin_right = 936.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.133333, 0.133333, 0.133333, 1 )
text = "REPOSITORY"
align = 1
valign = 1

[node name="close" type="Button" parent="Repo/Panel2/HBoxContainer8"]
margin_left = 940.0
margin_right = 960.0
margin_bottom = 24.0
size_flags_horizontal = 8
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.101961, 0.101961, 0.101961, 1 )
custom_colors/font_color_hover = Color( 0.937255, 0.937255, 0.937255, 1 )
shortcut_in_tooltip = false
text = " x "

[node name="HSeparator8" type="HSeparator" parent="Repo/Panel2"]
margin_top = 24.0
margin_right = 960.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 8 )
custom_styles/separator = SubResource( 3 )

[node name="List" type="VBoxContainer" parent="Repo/Panel2"]
margin_top = 32.0
margin_right = 960.0
margin_bottom = 186.0

[node name="name" type="Label" parent="Repo/Panel2/List"]
margin_right = 960.0
margin_bottom = 19.0
size_flags_horizontal = 7
size_flags_vertical = 1
custom_colors/font_color = Color( 0.0980392, 0.705882, 0.866667, 1 )
custom_colors/font_color_shadow = Color( 0.129412, 0.0784314, 0.423529, 1 )
text = "aaaaaaaaaaaaaaaa"
align = 1
valign = 1

[node name="HSeparator8" type="HSeparator" parent="Repo/Panel2/List"]
margin_top = 23.0
margin_right = 960.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 4 )
custom_styles/separator = SubResource( 3 )

[node name="HBoxContainer5" type="HBoxContainer" parent="Repo/Panel2/List"]
editor/display_folded = true
margin_top = 31.0
margin_right = 960.0
margin_bottom = 50.0

[node name="Link" type="Label" parent="Repo/Panel2/List/HBoxContainer5"]
margin_right = 34.0
margin_bottom = 19.0
size_flags_vertical = 1
text = "Link:"

[node name="html_url" type="LinkButton" parent="Repo/Panel2/List/HBoxContainer5"]
margin_left = 38.0
margin_right = 155.0
margin_bottom = 19.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.184314, 0.909804, 0.486275, 1 )
shortcut_in_tooltip = false
text = "aaaaaaaaaaaaa"

[node name="HBoxContainer7" type="HBoxContainer" parent="Repo/Panel2/List"]
margin_top = 54.0
margin_right = 960.0
margin_bottom = 73.0

[node name="Label" type="Label" parent="Repo/Panel2/List/HBoxContainer7"]
margin_right = 54.0
margin_bottom = 19.0
size_flags_vertical = 1
text = "Private:"

[node name="private" type="Label" parent="Repo/Panel2/List/HBoxContainer7"]
margin_left = 58.0
margin_right = 121.0
margin_bottom = 19.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.184314, 0.909804, 0.486275, 1 )
text = "bbbbbbb"

[node name="HBoxContainer4" type="HBoxContainer" parent="Repo/Panel2/List"]
margin_top = 77.0
margin_right = 960.0
margin_bottom = 96.0

[node name="Label" type="Label" parent="Repo/Panel2/List/HBoxContainer4"]
margin_right = 50.0
margin_bottom = 19.0
size_flags_vertical = 1
text = "Owner:"

[node name="owner" type="Label" parent="Repo/Panel2/List/HBoxContainer4"]
margin_left = 54.0
margin_right = 54.0
margin_bottom = 19.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.184314, 0.909804, 0.486275, 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Repo/Panel2/List"]
editor/display_folded = true
margin_top = 100.0
margin_right = 960.0
margin_bottom = 119.0

[node name="Label" type="Label" parent="Repo/Panel2/List/HBoxContainer2"]
margin_right = 85.0
margin_bottom = 19.0
size_flags_vertical = 1
text = "Description:"

[node name="description" type="Label" parent="Repo/Panel2/List/HBoxContainer2"]
margin_left = 89.0
margin_right = 960.0
margin_bottom = 19.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.439216, 0.419608, 0.419608, 1 )
autowrap = true

[node name="HBoxContainer6" type="HBoxContainer" parent="Repo/Panel2/List"]
editor/display_folded = true
margin_top = 123.0
margin_right = 960.0
margin_bottom = 142.0

[node name="Label" type="Label" parent="Repo/Panel2/List/HBoxContainer6"]
margin_right = 110.0
margin_bottom = 19.0
size_flags_vertical = 1
text = "Default Branch:"

[node name="default_branch" type="Label" parent="Repo/Panel2/List/HBoxContainer6"]
margin_left = 114.0
margin_right = 115.0
margin_bottom = 19.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0.184314, 0.909804, 0.486275, 1 )
autowrap = true

[node name="branches" type="Tree" parent="Repo/Panel2/List"]
visible = false
margin_top = 69.0
margin_right = 960.0
margin_bottom = 287.0
size_flags_vertical = 3
hide_root = true

[node name="HSeparator7" type="HSeparator" parent="Repo/Panel2/List"]
margin_top = 146.0
margin_right = 960.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 8 )
custom_styles/separator = SubResource( 3 )

[node name="repos_buttons" type="HBoxContainer" parent="Repo/Panel2"]
editor/display_folded = true
margin_top = 606.0
margin_right = 960.0
margin_bottom = 631.0
grow_vertical = 2
rect_clip_content = true
size_flags_vertical = 10
custom_constants/separation = 10
alignment = 1

[node name="delete" type="Button" parent="Repo/Panel2/repos_buttons"]
margin_left = 355.0
margin_right = 468.0
margin_bottom = 25.0
rect_clip_content = true
custom_colors/font_color = Color( 1, 0, 0.211765, 1 )
custom_colors/font_color_hover = Color( 1, 0.419608, 0.470588, 1 )
custom_colors/font_color_pressed = Color( 0.337255, 0.0156863, 0.0666667, 1 )
text = "DELETE REPO"

[node name="commit" type="Button" parent="Repo/Panel2/repos_buttons"]
margin_left = 478.0
margin_right = 604.0
margin_bottom = 25.0
rect_clip_content = true
text = "Commit to Repo"

[node name="NewRepo" type="ConfirmationDialog" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.5
margin_top = -133.5
margin_right = 288.5
margin_bottom = 133.5
popup_exclusive = true
window_title = "[Create a new Repository]"
dialog_hide_on_ok = false
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="NewRepo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.5
margin_top = -125.5
margin_right = 280.5
margin_bottom = 92.5

[node name="HBoxContainer" type="HBoxContainer" parent="NewRepo/VBoxContainer"]
margin_right = 561.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="NewRepo/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 278.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Repository Name:"

[node name="nome" type="LineEdit" parent="NewRepo/VBoxContainer/HBoxContainer"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="NewRepo/VBoxContainer"]
margin_top = 33.0
margin_right = 561.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="NewRepo/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 278.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Repository Description:"

[node name="descrizione" type="LineEdit" parent="NewRepo/VBoxContainer/HBoxContainer2"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="NewRepo/VBoxContainer"]
margin_top = 66.0
margin_right = 561.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="NewRepo/VBoxContainer/HBoxContainer3"]
margin_top = 3.0
margin_right = 278.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Privacy:"

[node name="privacy" type="OptionButton" parent="NewRepo/VBoxContainer/HBoxContainer3"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Private"
items = [ "Private", null, false, 0, null, "Public", null, false, 1, null ]
selected = 0

[node name="HBoxContainer4" type="HBoxContainer" parent="NewRepo/VBoxContainer"]
margin_top = 95.0
margin_right = 561.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="NewRepo/VBoxContainer/HBoxContainer4"]
margin_top = 4.0
margin_right = 278.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Initialize with README:"

[node name="readme" type="CheckBox" parent="NewRepo/VBoxContainer/HBoxContainer4"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="NewRepo/VBoxContainer"]
margin_top = 126.0
margin_right = 561.0
margin_bottom = 151.0

[node name="Label" type="Label" parent="NewRepo/VBoxContainer/HBoxContainer5"]
margin_top = 3.0
margin_right = 278.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Add .gitignore:"

[node name="gitignore" type="OptionButton" parent="NewRepo/VBoxContainer/HBoxContainer5"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Haskell"
items = [ "Haskell", null, false, 0, null ]
selected = 0

[node name="HBoxContainer6" type="HBoxContainer" parent="NewRepo/VBoxContainer"]
margin_top = 155.0
margin_right = 561.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="NewRepo/VBoxContainer/HBoxContainer6"]
margin_top = 3.0
margin_right = 278.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Add license:"

[node name="license" type="OptionButton" parent="NewRepo/VBoxContainer/HBoxContainer6"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "mit"
items = [ "mit", null, false, 0, null ]
selected = 0

[node name="HSeparator8" type="HSeparator" parent="NewRepo/VBoxContainer"]
visible = false
margin_top = 184.0
margin_right = 561.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 8 )
custom_styles/separator = SubResource( 3 )

[node name="error" type="Label" parent="NewRepo/VBoxContainer"]
visible = false
margin_top = 184.0
margin_right = 561.0
margin_bottom = 203.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0, 0.235294, 1 )
text = "Error: "
align = 1

[node name="Commit" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.5
margin_top = -133.5
margin_right = 288.5
margin_bottom = 133.5
popup_exclusive = true
window_title = "[Commit and Push]"
dialog_hide_on_ok = false
script = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="Commit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.5
margin_top = -125.5
margin_right = 280.5
margin_bottom = 92.5

[node name="HBoxContainer" type="HBoxContainer" parent="Commit/VBoxContainer"]
margin_right = 561.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="Commit/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 278.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "File:"

[node name="file" type="LineEdit" parent="Commit/VBoxContainer/HBoxContainer"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 29.0
size_flags_horizontal = 3
placeholder_text = "res://file.txt"

[node name="HBoxContainer8" type="HBoxContainer" parent="Commit/VBoxContainer"]
margin_top = 33.0
margin_right = 561.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="Commit/VBoxContainer/HBoxContainer8"]
margin_top = 5.0
margin_right = 278.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Path to Repository:"

[node name="path" type="LineEdit" parent="Commit/VBoxContainer/HBoxContainer8"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 29.0
size_flags_horizontal = 3
placeholder_text = "file.txt"

[node name="HBoxContainer2" type="HBoxContainer" parent="Commit/VBoxContainer"]
margin_top = 66.0
margin_right = 561.0
margin_bottom = 95.0

[node name="Branch" type="Label" parent="Commit/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 278.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Branch:"

[node name="branch" type="LineEdit" parent="Commit/VBoxContainer/HBoxContainer2"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Commit/VBoxContainer"]
editor/display_folded = true
visible = false
margin_top = 66.0
margin_right = 561.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="Commit/VBoxContainer/HBoxContainer3"]
margin_top = 3.0
margin_right = 278.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Privacy:"

[node name="privacy" type="OptionButton" parent="Commit/VBoxContainer/HBoxContainer3"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Private"
items = [ "Private", null, false, 0, null, "Public", null, false, 1, null ]
selected = 0

[node name="HBoxContainer4" type="HBoxContainer" parent="Commit/VBoxContainer"]
editor/display_folded = true
visible = false
margin_top = 66.0
margin_right = 561.0
margin_bottom = 93.0

[node name="Label" type="Label" parent="Commit/VBoxContainer/HBoxContainer4"]
margin_top = 4.0
margin_right = 278.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Initialize with README:"

[node name="readme" type="CheckBox" parent="Commit/VBoxContainer/HBoxContainer4"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="Commit/VBoxContainer"]
editor/display_folded = true
visible = false
margin_top = 66.0
margin_right = 561.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="Commit/VBoxContainer/HBoxContainer5"]
margin_top = 3.0
margin_right = 278.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Add .gitignore:"

[node name="gitignore" type="OptionButton" parent="Commit/VBoxContainer/HBoxContainer5"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Haskell"
items = [ "Haskell", null, false, 0, null ]
selected = 0

[node name="HBoxContainer7" type="HBoxContainer" parent="Commit/VBoxContainer"]
margin_top = 99.0
margin_right = 561.0
margin_bottom = 162.0

[node name="Branch" type="Label" parent="Commit/VBoxContainer/HBoxContainer7"]
margin_right = 278.0
margin_bottom = 63.0
size_flags_horizontal = 3
text = "Message:

"

[node name="message" type="LineEdit" parent="Commit/VBoxContainer/HBoxContainer7"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 63.0
size_flags_horizontal = 3

[node name="HBoxContainer6" type="HBoxContainer" parent="Commit/VBoxContainer"]
editor/display_folded = true
visible = false
margin_top = 66.0
margin_right = 561.0
margin_bottom = 91.0

[node name="Label" type="Label" parent="Commit/VBoxContainer/HBoxContainer6"]
margin_top = 3.0
margin_right = 278.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Add license:"

[node name="license" type="OptionButton" parent="Commit/VBoxContainer/HBoxContainer6"]
margin_left = 282.0
margin_right = 561.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "mit"
items = [ "mit", null, false, 0, null ]
selected = 0

[node name="HSeparator8" type="HSeparator" parent="Commit/VBoxContainer"]
visible = false
margin_top = 184.0
margin_right = 561.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 8 )
custom_styles/separator = SubResource( 3 )

[node name="error" type="Label" parent="Commit/VBoxContainer"]
visible = false
margin_top = 184.0
margin_right = 561.0
margin_bottom = 203.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0, 0.235294, 1 )
text = "Error: "
align = 1
[connection signal="confirmed" from="NewRepo" to="NewRepo" method="_on_NewRepo_confirmed"]
[connection signal="confirmed" from="Commit" to="Commit" method="_on_Commit_confirmed"]
